--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
         "name": "ハチノス"
     },
     "btn10": {
-        "num": 10,
+        "num": "10",
         "name": "ヒレ"
     },
     "btn11": {
