--- a/config.json
+++ b/config.json
@@ -17,8 +17,8 @@
         "name": "タン"
     },
     "btn4": {
-        "num": 4,
-        "name": "コリコリ"
+        "num": "4",
+        "name": "レバー2"
     },
     "btn5": {
         "num": 5,
@@ -26,26 +26,34 @@
     },
     "btn6": {
         "num": 6,
-        "name": "ツラミ"
+        "name": "ミノ"
     },
     "btn7": {
         "num": 7,
-        "name": "レバー"
+        "name": "とんたん"
     },
     "btn8": {
         "num": 8,
-        "name": "シマチョウ"
+        "name": "ピートロ"
     },
     "btn9": {
         "num": 9,
-        "name": "ハチノス"
+        "name": "鶏モモ"
     },
     "btn10": {
-        "num": "10",
-        "name": "ヒレ"
+        "num": 10,
+        "name": "＊＊＊"
     },
     "btn11": {
         "num": 11,
-        "name": "ミスジ"
+        "name": "＊＊＊"
+    },
+    "btn12": {
+        "num": "12",
+        "name": "いいね！"
+    },
+    "btn13": {
+        "num": 13,
+        "name": "＊＊＊"
     }
 }
