--- a/assets/config.json
+++ b/assets/config.json
@@ -17,7 +17,7 @@
         "name": "タン"
     },
     "btn4": {
-        "num": 4,
+        "num": "4",
         "name": "レバー"
     },
     "btn5": {
@@ -49,7 +49,7 @@
         "name": "＊＊＊"
     },
     "btn12": {
-        "num": 12,
+        "num": "12",
         "name": "＊＊＊"
     },
     "btn13": {
