--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         "name": "ロース"
     },
     "btn3": {
-        "num": 3,
+        "num": "3",
         "name": "タン"
     },
     "btn4": {
@@ -25,7 +25,7 @@
         "name": "ホルモン"
     },
     "btn6": {
-        "num": 6,
+        "num": "6",
         "name": "ミノ"
     },
     "btn7": {
@@ -41,8 +41,8 @@
         "name": "鶏モモ"
     },
     "btn10": {
-        "num": 10,
-        "name": "＊＊＊"
+        "num": "10",
+        "name": "＊＊＊///"
     },
     "btn11": {
         "num": 11,
@@ -89,8 +89,8 @@
         "name": "＊＊＊"
     },
     "btn22": {
-        "num": 22,
-        "name": "＊＊＊"
+        "num": "22",
+        "name": "よろしく"
     },
     "btn23": {
         "num": 23,
@@ -113,11 +113,15 @@
         "name": "＊＊＊"
     },
     "btn28": {
-        "num": 28,
-        "name": "＊＊＊"
+        "num": "28",
+        "name": "こんにちは"
     },
     "btn29": {
         "num": 29,
+        "name": "＊＊＊"
+    },
+    "btn30": {
+        "num": 30,
         "name": "＊＊＊"
     }
 }
