--- a/config.json
+++ b/config.json
@@ -29,8 +29,8 @@
         "name": "ミノ"
     },
     "btn7": {
-        "num": 7,
-        "name": "とんたん"
+        "num": "7",
+        "name": "たんたん"
     },
     "btn8": {
         "num": 8,
@@ -42,7 +42,7 @@
     },
     "btn10": {
         "num": "10",
-        "name": "＊＊＊///"
+        "name": "ナイスです！yorosikune"
     },
     "btn11": {
         "num": 11,
