--- a/config.json
+++ b/config.json
@@ -4,10 +4,6 @@
         "num": 0,
         "name": "カルビ"
     },
-    "btn1": {
-        "num": 1,
-        "name": "ハラミ"
-    },
     "btn2": {
         "num": 2,
         "name": "ロース"
@@ -30,35 +26,15 @@
     },
     "btn7": {
         "num": "7",
-        "name": "よろしく"
+        "name": "よろしくね"
     },
     "btn8": {
         "num": 8,
         "name": "ピートロ"
     },
     "btn9": {
-        "num": 9,
+        "num": "9",
         "name": "鶏モモ"
-    },
-    "btn10": {
-        "num": "10",
-        "name": "焼とんタン塩234"
-    },
-    "btn11": {
-        "num": 11,
-        "name": "＊＊＊"
-    },
-    "btn12": {
-        "num": "12",
-        "name": "＊＊＊"
-    },
-    "btn13": {
-        "num": 13,
-        "name": "＊＊＊"
-    },
-    "btn14": {
-        "num": 14,
-        "name": "＊＊＊"
     },
     "btn15": {
         "num": 15,
@@ -66,14 +42,6 @@
     },
     "btn16": {
         "num": 16,
-        "name": "＊＊＊"
-    },
-    "btn17": {
-        "num": 17,
-        "name": "＊＊＊"
-    },
-    "btn18": {
-        "num": 18,
         "name": "＊＊＊"
     },
     "btn19": {
@@ -123,5 +91,61 @@
     "btn30": {
         "num": 30,
         "name": "＊＊＊"
+    },
+    "btn31": {
+        "num": 31,
+        "name": "新規ラベル"
+    },
+    "btn32": {
+        "num": 32,
+        "name": "新規ラベル"
+    },
+    "btn33": {
+        "num": 33,
+        "name": "新規ラベル"
+    },
+    "btn34": {
+        "num": 34,
+        "name": "新規ラベル"
+    },
+    "btn35": {
+        "num": 35,
+        "name": "新規ラベル"
+    },
+    "btn36": {
+        "num": 36,
+        "name": "新規ラベル"
+    },
+    "btn37": {
+        "num": 37,
+        "name": "新規ラベル"
+    },
+    "btn38": {
+        "num": 38,
+        "name": "新規ラベル"
+    },
+    "btn39": {
+        "num": 39,
+        "name": "新規ラベル"
+    },
+    "btn40": {
+        "num": 40,
+        "name": "新規ラベル"
+    },
+    "btn41": {
+        "num": "41",
+        "name": "OKOKOK"
+    },
+    "btn42": {
+        "num": 42,
+        "name": "新規ラベル"
+    },
+    "btn43": {
+        "num": 43,
+        "name": "新規ラベル"
+    },
+    "btn44": {
+        "num": 44,
+        "name": "新規ラベル"
     }
 }
